@@ -25,6 +25,8 @@ Release 0.1.2 - 04/24/2008
    HBASE-572   Backport HBASE-512 to 0.1 branch
    HBASE-588   Still a 'hole' in scanners, even after HBASE-532
    HBASE-604   Don't allow CLASSPATH from environment pollute the hbase CLASSPATH
+   HBASE-608   HRegionServer::getThisIP() checks hadoop config var for dns interface name
+               (Jim R. Wilson via Stack)
 
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
